--- a/web/css/style.css
+++ b/web/css/style.css
@@ -6,7 +6,7 @@ body{
 }
 
 .cover{
-    background: url('../img/backgr.jpg') 50% no-repeat;
+    background: url('../img/backgr.JPG') 50% no-repeat;
     background-size:cover;
     overflow: hidden;
 }
